clusters/k4/kubernetes/apps/default/alpine/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alpine-deployment
  labels:
    app: alpine
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alpine
  template:
    metadata:
      labels:
        app: alpine
        egress.samoth.eu/internet-http: allow
        egress.samoth.eu/cluster: allow
        egress.samoth.eu/internal-ingress: allow
    spec:
      # dnsPolicy: Default
      containers:
      - name: alpine
        image: alpine
        imagePullPolicy: Always
        args:
        - sleep
        - infinity
        resources:
          requests:
            cpu: 2m
            memory: 20Mi
          limits:
            memory: 1Gi
        volumeMounts:
          - mountPath: "/mnt/alpine"
            name: mypvc
      volumes:
        - name: mypvc
          persistentVolumeClaim:
            claimName: alpine
